package com.lamego.agendapro.domain.enums;

public enum AgendamentoStatus {
    AGENDADO,
    CONFIRMADO,
    CANCELADO_CLIENTE,
    CANCELADO_PROFISSIONAL,
    NAO_COMPARECEU,
    CONCLUIDO
}
