package com.lamego.agendapro.domain.enums;

public enum UserRole {
    CLIENTE,
    PROFISSIONAL,
    ADMIN
}
